--- a/.github/workflows/paseofyou-blog-deploy.yml
+++ b/.github/workflows/paseofyou-blog-deploy.yml
@@ -45,7 +45,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
+    needs: manual_push
     steps:
       - name: Checkout
         uses: actions/checkout@v4
